Clean up project structure and update README with conversation history features

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - "8501:8501"
     env_file:
       - .env
+    environment:
+      - API_HOST=api
     volumes:
       - ./manual:/app/manual
       - ./data:/app/data
