--- a/requirements.txt
+++ b/requirements.txt
@@ -1,157 +1,45 @@
-Jinja2
-MarkupSafe
-PyPika
-PyYAML
-Pygments
-SQLAlchemy
-aiohappyeyeballs
-aiohttp
-aiosignal
-annotated-types
-anyio
-asgiref
-async-timeout
-attrs
-backoff
-bcrypt
-build
-cachetools
-certifi
-cffi
-charset-normalizer
-chroma-hnswlib
-chromadb
-click
-colorama
-coloredlogs
-cryptography
-dataclasses-json
-distro
-durationpy
-exceptiongroup
-fastapi
-filelock
-filetype
-flatbuffers
-frozenlist
-fsspec
-google-ai-generativelanguage
-google-api-core
-google-auth
-googleapis-common-protos
-greenlet
-grpcio-status
-grpcio
-h11
-httpcore
-httptools
-httpx-sse
-httpx
-huggingface-hub
-humanfriendly
-idna
-importlib_metadata
-importlib_resources
-joblib
-jsonpatch
-jsonpointer
-jsonschema-specifications
-jsonschema
-kubernetes
-langchain-community
-langchain-core
-langchain-google-genai
-langchain-huggingface
-langchain-text-splitters
-langchain
-langchain_community
-langchain_huggingface
-langgraph
-langsmith
-markdown-it-py
-marshmallow
-mdurl
-mmh3
-mpmath
-multidict
-mypy_extensions
-networkx
-numpy
-oauthlib
-onnxruntime
-opentelemetry-api
-opentelemetry-exporter-otlp-proto-grpc
-opentelemetry-instrumentation-asgi
-opentelemetry-instrumentation-fastapi
-opentelemetry-instrumentation
-opentelemetry-proto
-opentelemetry-sdk
-opentelemetry-semantic-conventions
-opentelemetry-util-http
-orjson
-overrides
-packaging
-pandas
-pillow
-posthog
-propcache
-proto-plus
-protobuf
-pulsar-client
-pyasn1
-pyasn1_modules
-pybase64
-pycparser
-pydantic-settings
-pydantic
-pydantic_core
-pylance
-pypdf
-pyproject_hooks
-pyreadline3
-python-dateutil
-python-dotenv
-pytz
-referencing
-regex
-requests-oauthlib
-requests-toolbelt
-requests
-rich
-rpds-py
-rsa
-safetensors
-scikit-learn
-scipy
-sentence-transformers
-shellingham
-six
-sniffio
-starlette
-sympy
-tenacity
-threadpoolctl
-tokenizers
-tomli
-torch
-tqdm
-transformers
-typer
-typing-inspect
-typing-inspection
-typing_extensions
-tzdata
-urllib3
-uvicorn
-watchfiles
-websocket-client
-websockets
-wrapt
-yarl
-zipp
-zstandard
-fastapi
-uvicorn[standard]
-websockets
-streamlit
-python-multipart
+# Core web framework
+fastapi==0.116.1
+uvicorn[standard]==0.35.0
+python-multipart==0.0.20
+
+# Streamlit for UI
+streamlit==1.49.1
+
+# Database and data processing
+sqlalchemy==2.0.43
+pandas==2.3.2
+numpy==2.3.2
+
+# LangChain ecosystem
+langchain==0.3.27
+langchain-core==0.3.75
+langchain-community==0.3.29
+langchain-huggingface==0.3.1
+langchain-text-splitters==0.3.10
+langsmith==0.4.21
+
+# AI/ML libraries
+transformers==4.56.0
+torch==2.8.0
+sentence-transformers==5.1.0
+scikit-learn==1.7.1
+
+# HTTP and async
+httpx==0.28.1
+requests==2.32.5
+aiohttp==3.12.15
+
+# Groq API client
+groq==0.31.0
+
+# Vector database (without problematic chroma-hnswlib)
+chromadb==1.0.20
+
+# PDF processing
+pypdf==6.0.0
+
+# Utility libraries
+python-dotenv==1.1.1
+pydantic==2.11.7
+pydantic-settings==2.10.1
