Clean up repository: remove unnecessary files
- Delete all .DS_Store files (macOS system files)
- Remove all __pycache__ directories and .pyc files
- Remove empty directories (logs/, vector_store/)
- Update .gitignore to prevent tracking of temporary/cache files

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,15 @@
 venv/
 __pycache__/
 *.pyc
+*.pyo
 data/vector_store/
 data/scada_data.db
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+logs/
+vector_store/
